--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
     "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@types/faker": "^6.6.9",
@@ -27,6 +28,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "sass": "^1.77.1",
     "tailwind-merge": "^2.3.0",
     "uploadthing": "^6.12.0"
@@ -39,6 +41,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5"
