--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/lib/apiRequest.js"
+    "src/lib/apiRequest.ts"
   ],
   "exclude": ["node_modules"]
 }
