added all prisma model

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@types/bcrypt": "^5.0.2",
     "@types/faker": "^6.6.9",
     "@uploadthing/react": "^6.6.0",
     "antd": "^5.17.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "faker": "^6.6.6",
