--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.15.0",
+    "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
     "@types/faker": "^6.6.9",
     "@uploadthing/react": "^6.6.0",
