--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
@@ -39,6 +41,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "sass": "^1.77.1",
+    "sweetalert2": "^11.12.0",
     "tailwind-merge": "^2.3.0",
     "uploadthing": "^6.12.0"
   },
